--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <!-- bootstrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <!-- Latest compiled and minified CSS -->
-<!--     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+    <!--     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
@@ -39,10 +39,10 @@
                     <h1 class="navbar-brand" href="#">Sky Travel</h1>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                    <ul class="nav navbar-nav">
-                        <li><a href="#">TEAM </a></li>
-                        <li><a href="#">CONTACT</a></li>
-                    </ul>
+                <ul class="nav navbar-nav">
+                    <li><a href="#">TEAM </a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
                 <!-- /.navbar-collapse -->
             </div>
             <!-- /.container-fluid -->
@@ -236,38 +236,41 @@
     <!-- contact Section -->
     <section id="contact">
         <!-- form 挿入 -->
-<div class="container">
-    <form>
-    <div class="row">
-                   <div class="col-md-12" style="color:#ffffff">
-                                  <h2 class="section-heading">CONTACT US</h2>
-                                 <p class="section-subheading">お気軽にお問い合わせください</p>
-                             </div>
+        <div class="container">
+            <form>
+                <div class="row">
+                    <div class="col-md-12" style="color:#ffffff">
+                        <h2 class="section-heading">CONTACT US</h2>
+                        <h3 class="section-subheading">お気軽にお問い合わせください</h3>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input type="name" class="form-control" placeholder="お名前 * " required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" placeholder="E メール * " required>
+                        </div>
+                        <div class="form-group">
+                            <input type="tel" class="form-control" placeholder="電話番号 *" required>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
 
-            <div class="col-md-6">
-                <div class="form-group">
-                <input type="name" class="form-control"  placeholder="お名前 * ">
-                          </div>
-                          <div class="form-group">
-                <input type="email" class="form-control"  placeholder="E メール * ">
-                          </div>
-                          <div class="form-group">
-                <input type="tel" class="form-control" placeholder="電話番号 *">
-                          </div>
+                                <textarea class="form-control" placeholder="お問い合わせ内容 *"></textarea>
+
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <button type="submit" class="btn btn-xl">送信</button>
+                    </div>
+            </form>
             </div>
-<div class="col-md-6"><div class="textarea">
-         <textarea name="" class="form-control" rows="11"  placeholder="お問い合わせ内容 *"></textarea>
-     </div>
-              </div>
-              <div class="col-md-12">
-                  <button type="submit" class="btn btn-xl">送信</button>
-              </div>
-        </form>
-</div>
-        </div></section>
+        </div>
+    </section>
     <!-- map -->
     <section id="map" class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.972490000501!2d139.69793291528316!3d35.70229458018939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d2f6cba44df%3A0x18b3bc4c95b9f078!2z44CSMTY5LTAwNzMg5p2x5Lqs6YO95paw5a6_5Yy655m-5Lq655S677yS5LiB55uu77yU4oiS77yY!5e0!3m2!1sja!2sjp!4v1473853060463" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.972490000501!2d139.69793291528316!3d35.70229458018939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d2f6cba44df%3A0x18b3bc4c95b9f078!2z44CSMTY5LTAwNzMg5p2x5Lqs6YO95paw5a6_5Yy655m-5Lq655S677yS5LiB55uu77yU4oiS77yY!5e0!3m2!1sja!2sjp!4v1473853060463" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
         <!-- GoogleMap 挿入 -->
     </section>
     <!-- footer -->
